--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chi-nick-book-app/book-list-server.git"
+    "url": "https://github.com/chi-nick-book-app/book-list-server.git"
   },
   "keywords": [
     "chi",
